Closed Bug 1549177 Opened 5 years ago Closed 5 years ago

Youtube won't display a page fully when visited but reload is OK

Categories

(Core :: DOM: Navigation, defect)

68 Branch
x86_64
Windows 10
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 --- verified

People

(Reporter: euthanasia_waltz, Assigned: squib)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image (screenshot)

STR:

  1. Start nightly with new profile
  2. (ensure web page(www.mozilla.org/en-US/firefox/nightly/firstrun/ in this case) is opened)
  3. Go to https://www.youtube.com

ER:
The page is displayed fully.

AR:
The page is not displayed fully, partially/incompletely displayed.

Reload is OK. The page is displayed normally.

mozregression:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=9242458b79d5ae6e9d48c9a2a591680d79c13211&tochange=9a0ce3016f03a914367e86c8339a8b885e309c83

Severity: normal → major
Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
Ever confirmed: true
Flags: needinfo?(jporter+bmo)
Keywords: regression
QA Contact: Virtual
Regressed by: 1493225

Confirming. This can also be resolved by disabling dom.ipc.cancel_content_js_when_navigating. I'll look into it...

Assignee: nobody → jporter+bmo
Status: NEW → ASSIGNED
Flags: needinfo?(jporter+bmo)

This patch fixes a race condition where we could request that a content page's
JS be cancelled during navigation in HangMonitorChild::InterruptCallback,
but the new page has already started loading by the time the JS is cancelled in
XPCJSContext::InterruptCallback, thus cancelling the JS of the new page. To
fix this, we now handle everything in HangMonitorChild::InterruptCallback,
making sure to only do anything for content scripts (to avoid inadvertently
cancelling the browser's JS).

Pushed by jporter@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a9dab8054a98
Fix a race condition when cancelling content JS during navigation; r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Flags: qe-verify+

Hi guys, is there a way to reproduce this issue or it only randomly occurs on certain machines. I've never seen this issue happen on my end and all I can confirm is that it doesn't happen in our latest beta. Maybe the reporter might helps us confirm this issue as fixed.

@atlanto can you please take a look in our latest Beta build and let us know if the issue is fixed for you as well.
you can find the build here : https://www.mozilla.org/en-US/firefox/channel/desktop/

Flags: needinfo?(euthanasia_waltz)

(In reply to Rares Doghi from comment #5)

Hi guys, is there a way to reproduce this issue or it only randomly occurs on certain machines. I've never seen this issue happen on my end and all I can confirm is that it doesn't happen in our latest beta. Maybe the reporter might helps us confirm this issue as fixed.

Get a nightly build from before the revision in comment 4, and then load youtube.com in a new profile. It should trigger the bug. If it still doesn't, then I'd have to guess that something changed on Youtube's side.

Flags: needinfo?(euthanasia_waltz)

Hi, we can confirm this issue verified as Fixed.
I have tried both Windows 10 and Windows 7 on both x86 and x64 with fresh profiles on builds from before of 7th may and I was unable to reproduce it, I really think this was fixed on Youtubes side.
I have also tested our latest Release Version Fx68 and the issue does not occur there either.
I will mark this issue accordingly.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: