dom/ipc/ProcessHangMonitor.cpp
@@ -123,7 +123,7 @@ class HangMonitorChild : public PProcessHangMonitorChild,
 
   void ActorDestroy(ActorDestroyReason aWhy) override;
 
-  void InterruptCallback();
+  bool InterruptCallback();
   void Shutdown();
 
   static HangMonitorChild* Get() { return sInstance; }
@@ -346,27 +346,20 @@ HangMonitorChild::~HangMonitorChild() {
   sInstance = nullptr;
 }
 
-void HangMonitorChild::InterruptCallback() {
+bool HangMonitorChild::InterruptCallback() {
   MOZ_RELEASE_ASSERT(NS_IsMainThread());
 
   // The interrupt callback is triggered at non-deterministic points when
   // recording/replaying, so don't perform any operations that can interact
   // with the recording.
   if (recordreplay::IsRecordingOrReplaying()) {
-    return;
+    return true;
   }
 
   bool paintWhileInterruptingJS;
   bool paintWhileInterruptingJSForce;
   TabId paintWhileInterruptingJSTab;
   LayersObserverEpoch paintWhileInterruptingJSEpoch;
-
-  bool cancelContentJS;
-  TabId cancelContentJSTab;
-  nsIRemoteTab::NavigationType cancelContentJSNavigationType;
-  int32_t cancelContentJSNavigationIndex;
-  mozilla::Maybe<nsCString> cancelContentJSNavigationURI;
-  int32_t cancelContentJSEpoch;
 
   {
     MonitorAutoLock lock(mMonitor);
@@ -375,15 +368,7 @@ void HangMonitorChild::InterruptCallback() {
     paintWhileInterruptingJSTab = mPaintWhileInterruptingJSTab;
     paintWhileInterruptingJSEpoch = mPaintWhileInterruptingJSEpoch;
 
-    cancelContentJS = mCancelContentJS;
-    cancelContentJSTab = mCancelContentJSTab;
-    cancelContentJSNavigationType = mCancelContentJSNavigationType;
-    cancelContentJSNavigationIndex = mCancelContentJSNavigationIndex;
-    cancelContentJSNavigationURI = std::move(mCancelContentJSNavigationURI);
-    cancelContentJSEpoch = mCancelContentJSEpoch;
-
     mPaintWhileInterruptingJS = false;
-    mCancelContentJS = false;
   }
 
   if (paintWhileInterruptingJS) {
@@ -394,6 +379,33 @@ void HangMonitorChild::InterruptCallback() {
       browserChild->PaintWhileInterruptingJS(paintWhileInterruptingJSEpoch,
                                              paintWhileInterruptingJSForce);
     }
+  }
+
+  // Only handle the interrupt for cancelling content JS if we have an actual
+  // window associated with this context...
+  JS::RootedObject global(mContext, JS::CurrentGlobalOrNull(mContext));
+  RefPtr<nsGlobalWindowInner> win = xpc::WindowOrNull(global);
+  if (!win) {
+    return true;
+  }
+
+  bool cancelContentJS;
+  TabId cancelContentJSTab;
+  nsIRemoteTab::NavigationType cancelContentJSNavigationType;
+  int32_t cancelContentJSNavigationIndex;
+  mozilla::Maybe<nsCString> cancelContentJSNavigationURI;
+  int32_t cancelContentJSEpoch;
+
+  {
+    MonitorAutoLock lock(mMonitor);
+    cancelContentJS = mCancelContentJS;
+    cancelContentJSTab = mCancelContentJSTab;
+    cancelContentJSNavigationType = mCancelContentJSNavigationType;
+    cancelContentJSNavigationIndex = mCancelContentJSNavigationIndex;
+    cancelContentJSNavigationURI = std::move(mCancelContentJSNavigationURI);
+    cancelContentJSEpoch = mCancelContentJSEpoch;
+
+    mCancelContentJS = false;
   }
 
   if (cancelContentJS) {
@@ -408,7 +420,7 @@ void HangMonitorChild::InterruptCallback() {
         rv = NS_NewURI(getter_AddRefs(uri),
                        cancelContentJSNavigationURI.value());
         if (NS_FAILED(rv)) {
-          return;
+          return true;
         }
       }
 
@@ -417,13 +429,19 @@ void HangMonitorChild::InterruptCallback() {
                                             cancelContentJSNavigationIndex, uri,
                                             cancelContentJSEpoch, &canCancel);
       if (NS_SUCCEEDED(rv) && canCancel) {
-        // Tell xpconnect that we want to cancel the content JS in this tab
-        // during the next interrupt callback.
-        XPCJSContext::SetTabIdToCancelContentJS(cancelContentJSTab);
-        JS_RequestInterruptCallback(mContext);
+        // Don't add this page to the BF cache, since we're cancelling its JS.
+        if (Document* doc = win->GetExtantDoc()) {
+          if (Document* topLevelDoc = doc->GetTopLevelContentDocument()) {
+            topLevelDoc->DisallowBFCaching();
+          }
+        }
+
+        return false;
       }
     }
   }
+
+  return true;
 }
 
 void HangMonitorChild::AnnotateHang(BackgroundHangAnnotations& aAnnotations) {
@@ -1179,7 +1197,7 @@ HangMonitoredProcess::UserCanceled() {
 
 static bool InterruptCallback(JSContext* cx) {
   if (HangMonitorChild* child = HangMonitorChild::Get()) {
-    child->InterruptCallback();
+    return child->InterruptCallback();
   }
 
   return true;
